feat: #38 フォロー機能実装 (#56)
* fix: #47 ルーティングを理解しやすい形へ変更 (#50)

* refactor: アカウント情報のパスをリネーム

* refactor: APIルーティングとコントローラーを再編成

* test: APIルーティング変更に伴うテストとOpenAPI仕様の更新

* test: #39 フォロー機能のRed Phaseテストを実装 (#51)

* WIP test: テストケースをspecファイルに追加

* test: フォロー機能のルーティング階層を追加

* test: フォロー機能のRed Phaseテストを実装

* test: フォロワー/フォロー一覧の空リストケースのテスト追加

* feat: #43 フォロー機能のバックエンド実装 (#52)

* feat: フォロー機能の基盤実装

* test: #43 Relationshipモデルのバリデーションテストを実装

* feat: フォロー関連の一覧画面基盤を実装

* feat: フォロー機能Api::Relationshipsを実装

* test: relationships API のテスト実装

* refactor: bin/lint修正

* feat: 53 タイムライン機能のバックエンド実装 (#54)

* test: タイムラインの request spec を実装

* feat: タイムライン表示のバックエンド実装

* test: 実装に合わせてテストの修正

* refactor: 変数名の命名を改善

* feat: #43 フォロー機能フロントエンド実装 (#55)

* fix: 他人のアイコンを編集不可にする

* feat: アカウント画面の数字を動的に実装

* feat: フォローボタンAjax実装

* feat: Followers と Followings 画面を作成

* feat: user_list_itemに最終投稿日時を追加

* refactor: bin/lint

* feat: 投稿がない場合の表示を調整

* refactor: N+1対応
