# app/models/relationship.rb
@@ -1,0 +1,34 @@
+# == Schema Information
+#
+# Table name: relationships
+#
+#  id           :bigint           not null, primary key
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#  follower_id  :bigint           not null
+#  following_id :bigint           not null
+#
+# Indexes
+#
+#  index_relationships_on_follower_id                   (follower_id)
+#  index_relationships_on_follower_id_and_following_id  (follower_id,following_id) UNIQUE
+#  index_relationships_on_following_id                  (following_id)
+#
+# Foreign Keys
+#
+#  fk_rails_...  (follower_id => users.id)
+#  fk_rails_...  (following_id => users.id)
+#
+class Relationship < ApplicationRecord
+  belongs_to :follower, class_name: 'User'
+  belongs_to :following, class_name: 'User'
+
+  validates :follower_id, uniqueness: { scope: :following_id }
+  validate :cannot_follow_self
+
+  private
+
+  def cannot_follow_self
+    errors.add(:following_id, 'cannot follow yourself') if follower_id == following_id
+  end
+end
