# app/models/user.rb
@@ -32,10 +32,40 @@ class User < ApplicationRecord
   has_many :posts, dependent: :destroy
   has_many :comments, dependent: :destroy
   has_many :notifications, dependent: :destroy
+  has_many :following_relationships, foreign_key: 'follower_id', class_name: 'Relationship', dependent: :destroy
+  has_many :followings, through: :following_relationships, source: :following
+  has_many :follower_relationships, foreign_key: 'following_id', class_name: 'Relationship', dependent: :destroy
+  has_many :followers, through: :follower_relationships, source: :follower
+
   has_one_attached :avatar
 
   def avatar_url
     return ActionController::Base.helpers.asset_path('icon_avatar-default.png') unless avatar.attached?
     Rails.application.routes.url_helpers.rails_blob_path(avatar, only_path: true)
+  end
+
+  def follow!(target_user)
+    following_relationships.create!(following_id: target_user.id)
+  end
+
+  def unfollow!(target_user)
+    relation = following_relationships.find_by!(following_id: target_user.id)
+    relation.destroy!
+  end
+
+  def following?(target_user)
+    following_relationships.exists?(following_id: target_user.id)
+  end
+
+  def last_post_ago
+    last_post =
+      if posts.loaded?
+        posts.max_by(&:created_at)
+      else
+        posts.order(created_at: :desc).first
+      end
+    return "Haven't posted yet" unless last_post
+
+    "The last post was #{last_post.time_ago}"
   end
 end
